More cleanup of unused dummy arguments, syntax. Began documenting parameters in oncvpsp.f90

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "--indent_continuation=default",
         "--indent_ampersand",
         "--align_paren",
-    ]
+    ],
+    "cSpell.enabled": false
 }
