Clean up old make build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,10 @@ else()
     find_package(BLAS)
 endif()
 if (BLAS_FOUND)
-    include_directories(${BLAS_INCLUDE_DIRS})
+    message(STATUS "BLAS library found:")
+    message(STATUS "  BLAS_LIBRARIES: ${BLAS_LIBRARIES}")
+    message(STATUS "  BLAS_LINKER_FLAGS: ${BLAS_LINKER_FLAGS}")
+    message(STATUS "  BLAS_INCLUDE_DIRS: ${BLAS_INCLUDE_DIRS}")
 else()
     message(FATAL ERROR "Failed to find BLAS.")
 endif()
@@ -99,7 +102,10 @@ else()
     find_package(LAPACK)
 endif()
 if (LAPACK_FOUND)
-    include_directories(${LAPACK_INCLUDE_DIRS})
+    message(STATUS "LAPACK library found:")
+    message(STATUS "  LAPACK_LIBRARIES: ${LAPACK_LIBRARIES}")
+    message(STATUS "  LAPACK_LINKER_FLAGS: ${LAPACK_LINKER_FLAGS}")
+    message(STATUS "  LAPACK_INCLUDE_DIRS: ${LAPACK_INCLUDE_DIRS}")
 else()
     message(FATAL ERROR "Failed to find LAPACK.")
 endif()
