Ignore scripts/*.sh because set_path modifies them. If they need to be updated, they should be force added

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ tests/data/*.out
 tests/data/*.diff
 tests/data/*.oncvpsp.*
 tests/data/TEST.report
+
+# set_path modifies these in-place
+scripts/*.sh
