--- a/src/oncvpsp/CMakeLists.txt
+++ b/src/oncvpsp/CMakeLists.txt
@@ -87,4 +87,4 @@ set(src_oncvpsp
 ###########################################################
 add_library(oncvpsp STATIC ${src_oncvpsp})
 add_dependencies(oncvpsp wxml)
-target_link_libraries(oncvpsp wxml Libxc::xcf03 ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+target_link_libraries(oncvpsp wxml ${LIBXC_LIBRARIES} ${LAPACK_LIBRARIES})
