--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
     ],
     "cSpell.enabled": false,
     "search.exclude": {
-        "**/*.mod": true
+        "**/*.mod": true,
+        "extern/": true,
+        "build/": true
     },
     "files.exclude": {
         "**/.git": true,
