Fixed bug I introduced in oncvpsp_r.f90

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,7 @@ if (NOT CMAKE_BUILD_TYPE)
 endif (NOT CMAKE_BUILD_TYPE)
 if (CMAKE_BUILD_TYPE STREQUAL "debug")
     message(STATUS "Building in debug mode")
-    # TODO: put this back -ffpe-trap=invalid,zero,overflow
-    # TODO: SIGFPE in fpovlp.f90:52 called by oncvpsp_r.f90 (log of zero at rr(1)?)
-    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -g -O0 -Wall -fcheck=all -fbacktrace")
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -g -O0 -Wall -fcheck=all -fbacktrace -ffpe-trap=invalid,zero,overflow")
 endif (CMAKE_BUILD_TYPE STREQUAL "debug")
 if (CMAKE_BUILD_TYPE STREQUAL "release")
     message(STATUS "Building in release mode")
