Fix pre-commit excludes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,3 @@
-exclude: "(scripts|tests|doc|extern|build)/.*"
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
@@ -7,24 +5,25 @@ repos:
       - id: check-added-large-files
         args: ["--maxkb=5000"]
       - id: end-of-file-fixer
-        exclude: "(scripts|tests|doc)/.*"
+        exclude: "(scripts|tests|doc|extern|build)/.*"
       - id: check-case-conflict
       - id: detect-private-key
       - id: check-docstring-first
       - id: mixed-line-ending
-        exclude: "(scripts|tests|doc)/.*"
+        exclude: "(scripts|tests|doc|extern|build)/.*"
       - id: trailing-whitespace
-        exclude: "(scripts|tests|doc)/.*"
+        exclude: "(scripts|tests|doc|extern|build)/.*"
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v4.9.1
     hooks:
       - id: commitizen
         stages: [commit-msg]
-  - repo: https://github.com/PlasmaFAIR/fortitude-pre-commit
-    rev: v0.7.5
-    hooks:
-      - id: fortitude
-        args: ["--fix"]
+  # - repo: https://github.com/PlasmaFAIR/fortitude-pre-commit
+  #   rev: v0.7.5
+  #   hooks:
+  #     - id: fortitude
+  #       args: ["--fix"]
+  #       exclude: "(scripts|tests|doc|extern|build)/.*"
   - repo: https://github.com/zmoon/findent-pre-commit
     rev: 527f61f770f504abd87f97932b510b8dce07ab3a
     hooks:
@@ -40,3 +39,4 @@ repos:
             --align_paren,
           ]
         additional_dependencies: [findent==4.3.1]
+        exclude: "(scripts|tests|doc|extern|build)/.*"
