Add some more goodies inspired by fortran-project-template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,26 +6,80 @@
         "editor.tabSize": 3,
         "editor.rulers": [132],
     },
-    "files.trimTrailingWhitespace": true,
+    "editor.wordWrap": "on",
+    "editor.definitionLinkOpensInPeek": true,
+    "editor.foldingMaximumRegions": 1000,
+    "editor.maxTokenizationLineLength": 1000,
+    "editor.unicodeHighlight.ambiguousCharacters": false,
+    "editor.formatOnSaveMode": "file",
+    "fortran.provide.symbols": "fortls",
+    "fortran.fortls.notifyInit": true,
+    "fortran.fortls.configure": ".fortls",
+    "fortran.fortls.maxCommentLineLength": 132,
+    "fortran.fortls.maxLineLength": 132,
+    "fortran.fortls.sortKeywords": true,
+    "fortran.fortls.incrementalSync": true,
+    "fortran.linter.compiler": "gfortran",
+    "fortran.linter.modOutput": "${workspaceFolder}/.generated_modules",
+    "fortran.linter.includePaths": [
+        "${workspaceFolder}/.generated_modules"
+    ],
+    "fortran.linter.extraArgs": [
+        "-Wall",
+        "-Wextra",
+        "-pedantic",
+        "-Warray-temporaries",
+        "-Wconversion-extra",
+        "-fbacktrace",
+        "-Og",
+        "-g3",
+        "-std=f2018",
+        "-Wuse-without-only",
+        "-Wrealloc-lhs",
+        "-Wrealloc-lhs-all",
+        "-Wimplicit-interface",
+        "-Wimplicit-procedure",
+        "-Wcharacter-truncation",
+    ],
     "fortran.formatting.formatter": "findent",
     "fortran.formatting.findentArgs": [
         "-ofree",
-        "--refactor_end",
-        "--indent=3",
+        "-i3",
         "--indent_contains=restart",
         "--indent_continuation=default",
         "--indent_ampersand",
         "--align_paren",
+        "--refactor_end",
     ],
-    "fortran.linter.compiler": "gfortran",
-    "fortran.linter.modOutput": "${workspaceFolder}/.linter_mods",
     "search.exclude": {
+        ".vscode/*": false,
         "**/*.mod": true,
         "extern/": true,
         "build/": true
     },
+    "files.autoSave": "onWindowChange",
+    "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
     "files.exclude": {
-        "**/.git": true,
+        ".git/": true,
+        ".vscode/*": false,
+        "**/*venv": true,
+        "**/*env": true,
+        "**/.*_cache*": true,
+        "**/__pycache__": true,
         "**/*.mod": true,
-    }
+        ".generated_modules/": true,
+    },
+    "files.watcherExclude": {
+        "**/.git/": false,
+        "**/.git/objects/**": false,
+        "**/.git/subtree-cache/**": false,
+        ".vscode/*": true,
+        "**/.venv": true,
+        "**/.*_cache*": true,
+        "**/__pycache__": true,
+        "**/*.mod": true,
+        "**/*.o": true,
+        "**/*.obj": true,
+    },
 }
