--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,19 @@
 {
+    "[python]": {
+        "editor.trimAutoWhitespace": true,
+        "editor.formatOnSave": true,
+        "editor.insertSpaces": true,
+        "editor.tabSize": 4,
+        "editor.rulers": [120],
+    },
     "[FortranFreeForm]": {
         "editor.trimAutoWhitespace": true,
         "editor.formatOnSave": true,
         "editor.insertSpaces": true,
         "editor.tabSize": 3,
-        "editor.rulers": [132],
+        "editor.rulers": [120, 132],
     },
-    "editor.wordWrap": "on",
+    "editor.wordWrap": "off",
     "editor.definitionLinkOpensInPeek": true,
     "editor.foldingMaximumRegions": 1000,
     "editor.maxTokenizationLineLength": 1000,
