Add HDF5 output option with quantities from run_plot and run_phsft (#2)
* Work on HDF5 version of run_plots

* Add dev/ dir to gitignore and tweak some vscode settings

* Fix critical memory error in dpnint introduced in c971e1b4df75b00986d78ffc611a98f702db1a4a

* Explicit use in hdf5_utils, bugfix in write_output_hdf5, tweaks to gitignore

* Add intents to write_output_hdf5

* Clean up and document lsch module, adding intents; replace inout -> in out

* Clean up and document vkboutwf

* HDF5 implementation of run_plot in write_output_hdf5

* Add log-der analysis to write_output_hdf5_m

* Split unscreened and semilocal pseudopotential arrays into l_() subgroups like other quantities

* Organize convergence vkb, convergence data consistently

---------

Co-authored-by: Austin Zadoks <austin.zadoks@psi.ch>

--- a/src/oncvpsp/CMakeLists.txt
+++ b/src/oncvpsp/CMakeLists.txt
@@ -71,6 +71,8 @@ set(src_oncvpsp
     functionals_messages_m.f90
     functionals_m.F90
     libxc_list_m.F90
+    hdf5_utils.f90
+    write_output_hdf5_m.f90
 )
 
 ###########################################################
@@ -78,4 +80,4 @@ set(src_oncvpsp
 ###########################################################
 add_library(oncvpsp STATIC ${src_oncvpsp})
 add_dependencies(oncvpsp wxml)
-target_link_libraries(oncvpsp wxml ${LIBXC_LIBRARIES} ${LAPACK_LIBRARIES})
+target_link_libraries(oncvpsp wxml ${COMMON_LIBRARIES})
